<?xml version="1.0"?>
<package format="3">
  <name>space_sim_node</name>
  <version>0.0.1</version>
  <description>SpaceSim ROS2 node wrapping SpaceSim C++ simulation</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
